crates/lang-parse/tests/snapshots/parser__parser_else-if.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0xc9df867cdb2339e3",
        output_hash: "0xc552351ce9b6d382",
        tree: (
            span: (
                start: 0,
                end: 35,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 35,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [
                    (Expression((
                        span: (
                            start: 0,
                            end: 35,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        attr: ([]),
                        expr: If((
                            span: (
                                start: 0,
                                end: 35,
                            ),
                            if_span: (
                                start: 0,
                                end: 2,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            condition: BinaryOperation((
                                span: (
                                    start: 3,
                                    end: 9,
                                ),
                                lhs: QualifiedName((
                                    span: (
                                        start: 3,
                                        end: 4,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([
                                            Whitespace((" ")),
                                        ]),
                                    ),
                                    parts: [
                                        (
                                            span: (
                                                start: 3,
                                                end: 4,
                                            ),
                                            name: "a",
                                        ),
                                    ],
                                )),
                                op: (
                                    span: (
                                        start: 5,
                                        end: 6,
                                    ),
                                    value: GreaterThan,
                                ),
                                rhs: Literal((
                                    span: (
                                        start: 7,
                                        end: 9,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([
                                            Whitespace((" ")),
                                        ]),
                                    ),
                                    literal: Integer((
                                        span: (
                                            start: 7,
                                            end: 8,
                                        ),
                                        value: 1,
                                        raw: "1",
                                    )),
                                )),
                            )),
                            body: (
                                span: (
                                    start: 9,
                                    end: 14,
                                ),
                                statements: (
                                    span: (
                                        start: 10,
                                        end: 13,
                                    ),
                                    extras: (
                                        leading: ([
                                            Whitespace((" ")),
                                        ]),
                                        trailing: ([]),
                                    ),
                                    statements: [],
                                    tail: Some((
                                        span: (
                                            start: 11,
                                            end: 13,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        attr: ([]),
                                        expr: Literal((
                                            span: (
                                                start: 11,
                                                end: 13,
                                            ),
                                            extras: (
                                                leading: ([]),
                                                trailing: ([
                                                    Whitespace((" ")),
                                                ]),
                                            ),
                                            literal: Integer((
                                                span: (
                                                    start: 11,
                                                    end: 12,
                                                ),
                                                value: 3,
                                                raw: "3",
                                            )),
                                        )),
                                    )),
                                ),
                            ),
                            next_if_span: Some((
                                start: 15,
                                end: 19,
                            )),
                            next_if: Some((
                                span: (
                                    start: 20,
                                    end: 35,
                                ),
                                if_span: (
                                    start: 20,
                                    end: 22,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                condition: BinaryOperation((
                                    span: (
                                        start: 23,
                                        end: 30,
                                    ),
                                    lhs: QualifiedName((
                                        span: (
                                            start: 23,
                                            end: 24,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([
                                                Whitespace((" ")),
                                            ]),
                                        ),
                                        parts: [
                                            (
                                                span: (
                                                    start: 23,
                                                    end: 24,
                                                ),
                                                name: "a",
                                            ),
                                        ],
                                    )),
                                    op: (
                                        span: (
                                            start: 25,
                                            end: 26,
                                        ),
                                        value: LessThan,
                                    ),
                                    rhs: UnaryOperation((
                                        span: (
                                            start: 27,
                                            end: 30,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        op: (
                                            span: (
                                                start: 27,
                                                end: 28,
                                            ),
                                            value: Minus,
                                        ),
                                        rhs: Literal((
                                            span: (
                                                start: 28,
                                                end: 30,
                                            ),
                                            extras: (
                                                leading: ([]),
                                                trailing: ([
                                                    Whitespace((" ")),
                                                ]),
                                            ),
                                            literal: Integer((
                                                span: (
                                                    start: 28,
                                                    end: 29,
                                                ),
                                                value: 1,
                                                raw: "1",
                                            )),
                                        )),
                                    )),
                                )),
                                body: (
                                    span: (
                                        start: 30,
                                        end: 35,
                                    ),
                                    statements: (
                                        span: (
                                            start: 31,
                                            end: 34,
                                        ),
                                        extras: (
                                            leading: ([
                                                Whitespace((" ")),
                                            ]),
                                            trailing: ([]),
                                        ),
                                        statements: [],
                                        tail: Some((
                                            span: (
                                                start: 32,
                                                end: 34,
                                            ),
                                            extras: (
                                                leading: ([]),
                                                trailing: ([]),
                                            ),
                                            attr: ([]),
                                            expr: Literal((
                                                span: (
                                                    start: 32,
                                                    end: 34,
                                                ),
                                                extras: (
                                                    leading: ([]),
                                                    trailing: ([
                                                        Whitespace((" ")),
                                                    ]),
                                                ),
                                                literal: Integer((
                                                    span: (
                                                        start: 32,
                                                        end: 33,
                                                    ),
                                                    value: 1,
                                                    raw: "1",
                                                )),
                                            )),
                                        )),
                                    ),
                                ),
                                next_if_span: None,
                                next_if: None,
                                else_span: None,
                                else_body: None,
                            )),
                            else_span: None,
                            else_body: None,
                        )),
                    )), ([])),
                ],
                tail: None,
            ),
        ),
    ),
)
---
