crates/lang-parse/tests/snapshots/parser__parser_empty tuple.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0xc5a416d50ad5dd24",
        output_hash: "0x470510d1af2713c2",
        tree: (
            span: (
                start: 0,
                end: 2,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 2,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [],
                tail: Some((
                    span: (
                        start: 0,
                        end: 2,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    attr: ([]),
                    expr: Tuple((
                        span: (
                            start: 0,
                            end: 2,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        values: [],
                    )),
                )),
            ),
        ),
    ),
)
---
