crates/lang-parse/tests/snapshots/parser__parser_escaped bracket string.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0xfbf7430805168c7b",
        output_hash: "0xa0b961dba54c8892",
        tree: (
            span: (
                start: 0,
                end: 35,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 35,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [],
                tail: Some((
                    span: (
                        start: 0,
                        end: 35,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    attr: ([]),
                    expr: Literal((
                        span: (
                            start: 0,
                            end: 35,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        literal: String((
                            span: (
                                start: 0,
                                end: 35,
                            ),
                            content: "string { with } escaped bracket",
                        )),
                    )),
                )),
            ),
        ),
    ),
)
---
