crates/lang-parse/tests/snapshots/parser__parser_exp.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: 8814132365533804099,
        tree: (
            inner: (
                span: (
                    start: 0,
                    end: 36,
                ),
                statements: (
                    span: (
                        start: 0,
                        end: 36,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    statements: [
                        (Expression((
                            span: (
                                start: 0,
                                end: 5,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            attr: ([]),
                            expr: Literal((
                                span: (
                                    start: 0,
                                    end: 5,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                literal: Float((
                                    span: (
                                        start: 0,
                                        end: 5,
                                    ),
                                    value: 0.0001,
                                    raw: ".1e-3",
                                )),
                            )),
                        )), ([
                            Whitespace((" ")),
                        ])),
                        (Expression((
                            span: (
                                start: 7,
                                end: 12,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            attr: ([]),
                            expr: Literal((
                                span: (
                                    start: 7,
                                    end: 12,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                literal: Float((
                                    span: (
                                        start: 7,
                                        end: 12,
                                    ),
                                    value: 100.0,
                                    raw: ".1e+3",
                                )),
                            )),
                        )), ([
                            Whitespace((" ")),
                        ])),
                        (Expression((
                            span: (
                                start: 14,
                                end: 18,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            attr: ([]),
                            expr: Literal((
                                span: (
                                    start: 14,
                                    end: 18,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                literal: Float((
                                    span: (
                                        start: 14,
                                        end: 18,
                                    ),
                                    value: 100.0,
                                    raw: ".1e3",
                                )),
                            )),
                        )), ([
                            Whitespace((" ")),
                        ])),
                        (Expression((
                            span: (
                                start: 20,
                                end: 24,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            attr: ([]),
                            expr: Literal((
                                span: (
                                    start: 20,
                                    end: 24,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                literal: Float((
                                    span: (
                                        start: 20,
                                        end: 24,
                                    ),
                                    value: 1000.0,
                                    raw: "1.e3",
                                )),
                            )),
                        )), ([
                            Whitespace((" ")),
                        ])),
                        (Expression((
                            span: (
                                start: 26,
                                end: 31,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            attr: ([]),
                            expr: Literal((
                                span: (
                                    start: 26,
                                    end: 31,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                literal: Float((
                                    span: (
                                        start: 26,
                                        end: 31,
                                    ),
                                    value: 1200.0,
                                    raw: "1.2e3",
                                )),
                            )),
                        )), ([
                            Whitespace((" ")),
                        ])),
                    ],
                    tail: Some((
                        span: (
                            start: 33,
                            end: 36,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        attr: ([]),
                        expr: Literal((
                            span: (
                                start: 33,
                                end: 36,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            literal: Float((
                                span: (
                                    start: 33,
                                    end: 36,
                                ),
                                value: 1000.0,
                                raw: "1e3",
                            )),
                        )),
                    )),
                ),
            ),
            hash: 15480144411311971288,
        ),
    ),
)
---
