crates/lang-parse/tests/snapshots/parser__parser_expr string.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: 6056714833267314109,
        tree: (
            inner: (
                span: (
                    start: 0,
                    end: 36,
                ),
                statements: (
                    span: (
                        start: 0,
                        end: 36,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    statements: [],
                    tail: Some((
                        span: (
                            start: 0,
                            end: 36,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        attr: ([]),
                        expr: String((
                            span: (
                                start: 0,
                                end: 36,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            parts: [
                                Content((
                                    span: (
                                        start: 1,
                                        end: 8,
                                    ),
                                    content: "string ",
                                )),
                                Expression((
                                    span: (
                                        start: 23,
                                        end: 24,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([]),
                                    ),
                                    expr: BinaryOperation((
                                        span: (
                                            start: 9,
                                            end: 23,
                                        ),
                                        lhs: QualifiedName((
                                            span: (
                                                start: 9,
                                                end: 13,
                                            ),
                                            extras: (
                                                leading: ([]),
                                                trailing: ([
                                                    Whitespace((" ")),
                                                ]),
                                            ),
                                            parts: [
                                                (
                                                    span: (
                                                        start: 9,
                                                        end: 13,
                                                    ),
                                                    name: "more",
                                                ),
                                            ],
                                        )),
                                        op: (
                                            span: (
                                                start: 14,
                                                end: 15,
                                            ),
                                            value: Add,
                                        ),
                                        rhs: QualifiedName((
                                            span: (
                                                start: 16,
                                                end: 23,
                                            ),
                                            extras: (
                                                leading: ([]),
                                                trailing: ([]),
                                            ),
                                            parts: [
                                                (
                                                    span: (
                                                        start: 16,
                                                        end: 23,
                                                    ),
                                                    name: "complex",
                                                ),
                                            ],
                                        )),
                                    )),
                                )),
                                Content((
                                    span: (
                                        start: 24,
                                        end: 35,
                                    ),
                                    content: " expression",
                                )),
                            ],
                        )),
                    )),
                ),
            ),
            hash: 18253850276064083641,
        ),
    ),
)
---
